--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http-proxy-middleware": "^1.0.1",
-    "react-beautiful-dnd": "^13.0.0",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.2",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "react": "^16.13.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
+    "redis": "^3.0.2",
     "socket.io": "^2.3.0",
     "uuid": "^7.0.1"
   },
