--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redis": "^3.0.2",
+    "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
     "uuid": "^7.0.1"
   },
