--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.2",
     "node-sass": "^4.13.1",
+    "nodemon": "^2.0.2",
     "path": "^0.12.7",
     "react": "^16.13.0",
     "react-beautiful-dnd": "^13.0.0",
@@ -27,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "node server/index.js",
+    "server": "nodemon node server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
